# fp-plus-plus

./: .clang-format  .clang-tidy  .clangd  .cmake-format.yaml  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  ab.h  asan.txt  class_name  class_name.cpp  coding_style.md  deps.mk  design.md  howto.md  lib.h  m.md  main.cpp  object.md  plan.md  progress.md  readme.md  readme.org  reuse.toml  sonar-project.properties  structure.md  styleguide.md  swamp.txt  vcpkg.json
LICENSES/: MIT.txt
cmake/: clang_tidy.cmake  functions.cmake  submodules.cmake  vcpkg.cmake
docs/: meta.md  option.md  readme.md
fp/: fp.h
fp/core/: applicative.h  core.h  functor.h
fp/data/: data.h  nothing.h  types.h
fp/internal/meta/: arrow.h  cast.h  inner_type.h  instance.h  kleisli.h  meta.h  outer_type.h  rebind.h  tools.h
fp/internal/meta/tools/: all.h  cast.h  inner_type.h  rebind.h
fp/internal/storage/: box.h  box_storage.h  defs.h  readme.md  stack_storage.h  storage.h
fp/kernel/mixins/: mixins.h  with_applicative.h  with_apply.h  with_functor.h  with_pure.h  with_value.h
fp/kernel/ops/: always.h  andThen.h  ap.h  as.h  compose.h  discard.h  dollar.h  extract.h  fish.h  flip.h  fmap.h  fproduct.h  id.h  identity.h  lift.h  map2.h  ops.h  pipe.h  product.h  pure.h  zip.h
fp/kernel/traits/: has_apply.h  has_value.h  is_applicative.h  is_apply.h  is_functor.h  is_pure.h  traits.h
fp/laws/: applicative_laws.h  compose_laws.h  functor_laws.h  laws.h  pipe_laws.h
fp/syntax/: compose_dot.h  compose_op.h  dollar_op.h  pipe_op.h  syntax.h
include/fp/: box.h  concepts.h  debug.h  defs.h  fp  fp.h  functions.h  guards.h  meta.h  operators.h  option.h  prelude.h  syntax.h  tools.h  type_classes.h
include/fp/__internal/: box.h
include/fp/base/: operators.h  prelude.h  traits.h
include/fp/base/operators/: composition.h
include/fp/base/prelude/: compose.h  dollar.h  identity.h  pipe.h
include/fp/base/traits/: arrow.h
include/fp/core/: all.h  core.h  id.h  nothing.h  types.h  whatever.h
include/fp/core/data/: all.h  id.h
include/fp/core/dataclasses/: all.h  id.h  nothing.h
include/fp/core/mixins/: all.h  eq.h  flat_map.h  map.h  value.h  with_eq.h  with_flat_map.h  (+2 more)
include/fp/data/: all.h  base.h  data.h  id.h  instances.h  nothing.h
include/fp/instance/: instance.h
include/fp/internal/: box.h  box_storage.h  object.h  readme.md  stack_storage.h  storage.h  storage_box.h  storage_stack.h
include/fp/kernel/: box.h
include/fp/mixins/: all.h  apply.h  eq.h  map.h  object.h  readme.md  storage.h  value.h
include/fp/monads/: option copy.h  option.h
include/fp/operators/: all.h  composition.h  eq.h  equality.h  operators.h  semigroup.h  todo_semigroup.h
include/fp/ops/: monoid.h
include/fp/prelude/: all.h  compose.h  defs.h  dollar.h  dot.h  equals.h  flip.h  fmap.h  identity.h  lift.h  pipe.h  prelude.h  pure.h  readme.md  todo_product.h  tuple.h
include/fp/test/: CMakeLists.txt
include/fp/tools/: all.h  apply.h  arrow.h  cast.h  flat_map.h  inner_type.h  instance.h  instance_with.h  make_pair.h  map.h  rebind.h  storage.h  tc.h  tools.h  tuple.h  value.h
include/fp/traits/: all.h  applicative.h  arrow.h  eq.h  flat_map.h  functor.h  guards.h  has_eq.h  has_functor.h  has_semigroupal.h  instance.h  monad.h  monoid.h  object.h  semigroup.h  semigroupal.h  todo_applicative.h  todo_monad.h  todo_monoid.h  todo_semigroup.h  traits.h  tuple.h  value.h
include/fp/type/: classes.h  eq.h  functor.h  value.h
include/fp/types/: all.h
scripts/: fix_header_guards.sh  run_tests.sh
test/: CMakeLists.txt  option.cpp  syntax copy.cpp  syntax.cpp
test/include/: fp_test.h  shorts.h
test/src/: cast.cpp  guards.cpp  meta.cpp  operators.cpp  option.cpp  syntax.cpp  tools.cpp
test/src/__internal/box/: box_construction.cpp  box_get.cpp
test/src/base/prelude/: compose.cpp  dollar.cpp  flip.cpp  pipe.cpp
test/src/box/: box_construction.cpp  box_get.cpp
test/src/concepts/: eq.cpp  monoid.cpp
test/src/core/: applicative.cpp  functor.cpp  id.cpp  readme.md
test/src/core/__mixins/: with_value.cpp
test/src/core/data/: id.cpp
test/src/core/mixins/: todo_eq.cpp  todo_flat_map.cpp
test/src/core/types/: eq.cpp  functor.cpp
test/src/data/: id.cpp  id_box.cpp  id_stack.cpp  nothing.cpp
test/src/data/monad/: id.cpp
test/src/include/: shorts.h
test/src/instance/monad/: id.cpp
test/src/internal/: box.cpp  object.cpp  storage.cpp  storage_box.cpp  storage_stack.cpp
test/src/internal/box/: box_construction.cpp
test/src/internal/meta/: arrow.cpp  cast.cpp  rebind.cpp
test/src/internal/mixins/: eq.cpp  value.cpp
test/src/internal/storage/: box.cpp  box_storage.cpp  stack_storage.cpp  storage.cpp  storage_box.cpp  storage_stack.cpp
test/src/internal/tools/: cast.cpp
test/src/kernel/box/: box_construction.cpp  box_get.cpp
test/src/kernel/mixins/: readme.md  with_applicative.cpp  with_apply.cpp  with_functor.cpp  with_pure.cpp  with_value.cpp
test/src/kernel/ops/: always.cpp  andThem.cpp  ap.cpp  as.cpp  compose.cpp  discard.cpp  fish.cpp  flip.cpp  fmap.cpp  fproduct.cpp  lift.cpp  map2.cpp  pipe.cpp  product.cpp  pure.cpp  readme.md
test/src/mixins/: apply.cpp  eq.cpp  flat_map.cpp  map.cpp  object.cpp  storage.cpp  value.cpp
test/src/monads/option/: option.cpp  option_get.cpp  option_map.cpp  option_some copy.cpp  option_some.cpp  readme.md
test/src/prelude/: compose.cpp  dollar.cpp  dot.cpp  equals.cpp  flip.cpp  fmap.cpp  identity.cpp  lift.cpp  pipe.cpp  pure.cpp  touple.cpp  tuple.cpp
test/src/syntax/: operators.cpp
test/src/tools/: cast.cpp  map.cpp  tc.cpp  value.cpp
test/src/traits/: eq.cpp  functor.cpp  monad.cpp  monoid.cpp  semigroup.cpp
test/src/type/: eq_class.cpp
test/src/type/eq/: class_traits_eq.cpp  eq.cpp  eq_class.cpp  eq_equals.cpp  eq_ops.cpp  eq_props.cpp  eq_test.h  eq_traits.cpp  eq_types.h  pre_ops_equals.cpp
test/src/type/functor/: functor_props.cpp  functor_types.h
test/src/type/value/: pre_lift.cpp  pre_pure.cpp  value_lift.cpp  value_pure.cpp  value_test.h  value_traits.cpp  value_types.h
(+58 files in other folders)
